<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="6dp"
        android:background="@color/maviRenk"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/Mesaj"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:layout_constraintVertical_bias="0.769" />

    <View
        android:id="@+id/view7"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="9dp"
        android:background="#8E8E8E"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginTop="6dp"
        android:background="#8E8E8E"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:layout_editor_absoluteX="-8dp" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="6dp"
        android:background="#8E8E8E"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="16dp"
        android:background="@color/sariRenk"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/chip8"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip8"
        android:layout_width="123dp"
        android:layout_height="54dp"
        android:background="@color/sariRenk"
        android:backgroundTint="@color/white"
        android:text="@string/Konumu"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/chip6"
        app:layout_constraintTop_toTopOf="@+id/chip6" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip6"
        android:layout_width="123dp"
        android:layout_height="54dp"
        android:autoText="false"
        android:background="@color/sariRenk"
        android:backgroundTint="@color/white"
        android:text="@string/Aciklama"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip5"
        android:layout_width="123dp"
        android:layout_height="54dp"
        android:backgroundTint="@color/sariRenk"
        android:text="@string/ilanBilgileri"
        android:textAlignment="center"
        app:chipStrokeColor="@color/sariRenk"
        app:layout_constraintBottom_toBottomOf="@+id/chip8"
        app:layout_constraintEnd_toStartOf="@+id/chip6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/chip6" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/maviRenk"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ilanDetayiYazisi"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.282"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.367" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="73dp"
        android:text="@string/ilanAciklamasi"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="748dp"
        android:layout_height="309dp"
        android:layout_marginBottom="316dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/giulietta" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        android:text="BURAK AUTO"
        android:textColor="@color/maviRenk"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="5dp"
        android:text="@string/FiltrelemeSatiri"
        android:textColor="@color/maviRenk"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/adres"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:background="#575757"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="1dp"
        android:text="@string/FiyatYazisi"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="12dp"
        android:text="@string/ilanTarihiYazisi"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="4dp"
        android:text="@string/markaYazisi"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView13"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view6" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:text="@string/fiyatDegeri"
        android:textColor="@color/maviRenk"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip8" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:text="@string/ilanTarihi"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="15dp"
        android:lineSpacingExtra="20sp"
        android:text="@string/AlfaRomeo"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view6" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="153dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="6dp"
        android:background="@color/maviRenk"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/ara"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView18"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.775" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="67dp"
        android:layout_height="58dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:layout_constraintVertical_bias="0.677"
        app:srcCompat="@drawable/png" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:background="#212121"
        android:text="1/18"
        android:textColor="@color/white"
        app:chipBackgroundColor="#2A2A2A"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="39dp"
        android:layout_height="166dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.509"
        app:srcCompat="@drawable/sonkral" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="79dp"
        android:layout_height="78dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/paylkas" />

</androidx.constraintlayout.widget.ConstraintLayout>